// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Search Field/Menu (Private) Default 1`] = `
.c7 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/100);
  background-size: cover;
  background-position: center;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  cursor: pointer;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:hover {
  background: #3498db;
  color: white;
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c6 {
  margin: -6px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5 > input {
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Apple
          </div>
        </div>
      </li>
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Banana
          </div>
        </div>
      </li>
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Pear
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) footer only 1`] = `
.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <p>
        a footer
      </p>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) onItemClick 1`] = `
.c7 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/100);
  background-size: cover;
  background-position: center;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  cursor: pointer;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:hover {
  background: #3498db;
  color: white;
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c6 {
  margin: -6px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5 > input {
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <ul
      className="c2"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Apple
          </div>
        </div>
      </li>
      <li
        className="c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Banana
          </div>
        </div>
      </li>
      <li
        className="c3"
        onClick={[Function]}
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Pear
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) onMenuMouseDown 1`] = `
.c7 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 40px;
  min-height: 40px;
  width: 40px;
  height: 40px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  background-image: url(https://picsum.photos/100);
  background-size: cover;
  background-position: center;
}

.c1 {
  margin-top: 16px;
  min-width: 100%;
  whitespace: no-wrap;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  background: white;
  position: absolute;
}

.c1 > ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c3 {
  cursor: pointer;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  color: #59636f;
  border-bottom: solid 1px rgba(0,0,0,0.16);
}

.c3:hover {
  background: #3498db;
  color: white;
}

.c3:first-child {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
}

.c3:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c3 > div {
  padding: 14px;
}

.c3 > div:focus {
  outline: auto;
  outline-color: #3498db;
}

.c3 > div:hover {
  outline: none;
}

.c6 {
  margin: -6px;
  margin-right: 8px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5 > input {
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  overflow-y: auto;
  -webkit-scroll-behavior: smooth;
  -moz-scroll-behavior: smooth;
  -ms-scroll-behavior: smooth;
  scroll-behavior: smooth;
}

.c0 {
  width: 400px;
}

<div
  className="c0"
>
  <div
    className="c1"
    onMouseDown={[Function]}
  >
    <ul
      className="c2"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Apple
          </div>
        </div>
      </li>
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Banana
          </div>
        </div>
      </li>
      <li
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6 c7"
              size={40}
              src="https://picsum.photos/100"
            />
             
            Pear
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Search Field/Menu (Private) with empty items 1`] = `
.c0 {
  width: 400px;
}

<div
  className="c0"
/>
`;
